--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,4 @@
-cmake_minimum_required(VERSION 3.23)
+cmake_minimum_required(VERSION 3.22)
 project(libisyntax)
 
 set(CMAKE_C_STANDARD 17)
@@ -21,6 +21,16 @@ include_directories("${CMAKE_SOURCE_DIR}/src/utils")
 include_directories("${CMAKE_SOURCE_DIR}/src/isyntax")
 include_directories("${CMAKE_SOURCE_DIR}/src/third_party")
 
+find_package(Threads REQUIRED)
+if (UNIX AND NOT APPLE) # needed for sem_wait, etc.
+    find_library(RT_LIBRARY rt)
+    set(EXTRA_LIBS ${RT_LIBRARY})
+elseif (APPLE)
+    # No extra libraries needed for macOS
+elseif (WIN32)
+    # No extra libraries needed for Windows
+endif ()
+
 set(LIBISYNTAX_COMMON_SOURCE_FILES
         src/libisyntax.c
         src/isyntax/isyntax.c
@@ -33,6 +43,16 @@ set(LIBISYNTAX_COMMON_SOURCE_FILES
         src/third_party/yxml.c
         src/third_party/ltalloc.cc
 )
+
+find_package(Threads REQUIRED)
+if (UNIX AND NOT APPLE) # needed for sem_wait, etc.
+    find_library(RT_LIBRARY rt)
+    set(EXTRA_LIBS ${RT_LIBRARY})
+elseif (APPLE)
+    # No extra libraries needed for macOS
+elseif (WIN32)
+    # No extra libraries needed for Windows
+endif ()
 
 if (WIN32)
     set(LIBISYNTAX_COMMON_SOURCE_FILES ${LIBISYNTAX_COMMON_SOURCE_FILES} src/platform/win32_utils.c)
@@ -50,8 +70,9 @@ add_executable(isyntax_example
 )
 
 if (WIN32)
-    target_link_libraries(libisyntax winmm)
-    target_link_libraries(isyntax_example winmm)
+    target_link_libraries(libisyntax winmm Threads::Threads)
+    target_link_libraries(isyntax_example winmm Threads::Threads)
 else()
-
+    target_link_libraries(libisyntax Threads::Threads ${EXTRA_LIBS})
+    target_link_libraries(isyntax_example Threads::Threads ${EXTRA_LIBS})
 endif()
