Fix isyntax_to_tiff.c path when libtiff is found
Fix the path to the src/examples/isyntax_to_tiff.c source file when libtiff is found by find_package

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -108,7 +108,7 @@ if (NOT TIFF_FOUND)
     endif()
 else()
     include_directories(${TIFF_INCLUDE_DIR})
-    add_executable(isyntax-to-tiff src/isyntax_to_tiff.c)
+    add_executable(isyntax-to-tiff src/examples/isyntax_to_tiff.c)
     target_link_libraries(isyntax-to-tiff libisyntax ${TIFF_LIBRARIES})
 endif()
 
