Change static library name to libisyntax.a
Previously the cmake configuration would build the static library as liblibisyntax.a. This will now build libisyntax.a

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -76,18 +76,18 @@ else()
     set(LIBISYNTAX_COMMON_SOURCE_FILES ${LIBISYNTAX_COMMON_SOURCE_FILES} src/platform/linux_utils.c)
 endif()
 
-add_library(libisyntax ${LIBISYNTAX_COMMON_SOURCE_FILES})
+add_library(isyntax ${LIBISYNTAX_COMMON_SOURCE_FILES})
 
 if (WIN32)
-    target_link_libraries(libisyntax winmm)
+    target_link_libraries(isyntax winmm)
 else()
     find_package(Threads REQUIRED)
-    target_link_libraries(libisyntax Threads::Threads)
+    target_link_libraries(isyntax Threads::Threads)
 endif()
 
 # Build example program: isyntax_example.c
 add_executable(isyntax_example src/examples/isyntax_example.c)
-target_link_libraries(isyntax_example libisyntax)
+target_link_libraries(isyntax_example isyntax)
 
 # Build iSyntax to TIFF converter program (depends on LibTIFF library)
 find_package(TIFF)
@@ -101,7 +101,7 @@ if (NOT TIFF_FOUND)
         include_directories(${TIFF_INCLUDE_DIR})
         add_executable(isyntax-to-tiff src/examples/isyntax_to_tiff.c)
         target_compile_definitions(isyntax-to-tiff PRIVATE LINK_LIBTIFF_AT_RUNTIME=1)
-        target_link_libraries(isyntax-to-tiff libisyntax winmm)
+        target_link_libraries(isyntax-to-tiff isyntax winmm)
     else()
         message(WARNING "LibTIFF not found")
         message(WARNING "Will not compile `isyntax-to-tiff` utility")
@@ -109,7 +109,7 @@ if (NOT TIFF_FOUND)
 else()
     include_directories(${TIFF_INCLUDE_DIR})
     add_executable(isyntax-to-tiff src/examples/isyntax_to_tiff.c)
-    target_link_libraries(isyntax-to-tiff libisyntax ${TIFF_LIBRARIES})
+    target_link_libraries(isyntax-to-tiff isyntax ${TIFF_LIBRARIES})
 endif()
 
 
@@ -156,7 +156,7 @@ if(BUILD_TESTING)
     if(NOT(APPLE))
         # TODO: fix this test on macOS: fatal error: 'threads.h' file not found
         add_executable(thread_test test/thread_test.c)
-        target_link_libraries(thread_test libisyntax)
+        target_link_libraries(thread_test isyntax)
         add_test(NAME smoke_thread_test
                 COMMAND thread_test)
     endif()
